--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +17,26 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list {
+  padding: 0px 20px;
+  list-style-type: none;
+}
+.listItem {
+  display: flex;
+}
+
+.listItem span {
+  width: 150px;
+  margin-right: 20px;
+}
+.listHeader {
+  font-size: 18px;
+  font-weight: bold;
+  background-color: gray;
+  display: flex;
+}
+
+.listHeader span {
+  width: 150px;
+  margin-right: 20px;
 }
